--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 html {
-    font-family: system-ui, sans-serif;
+  font-family: system-ui, sans-serif;
 }
